--- a/module/Album/view/album/album/index.phtml
+++ b/module/Album/view/album/album/index.phtml
@@ -1,1 +1,27 @@
-<h1>Index</h1>
+<?php
+
+$title = 'My albums';
+$this->headTitle($title);
+
+?>
+<h1><?php echo $this->escapeHtml($title); ?></h1>
+<p>
+	<a href="<?php echo $this->url('album', array('action' => 'add')); ?>">Add new album</a>
+</p>
+
+<table class="table">
+<tr>
+	<th>Title</th>
+	<th>Artist</th>
+	<th>&nbsp;</th>
+</tr>
+<?php foreach ($algums as $album) : ?>
+<tr>
+	<td><?php echo $this->escapeHtml($album->title); ?></td>
+	<td><?php echo $this->escapeHtml($album->artist); ?></td>
+	<td>
+		<a href="<?php echo $this->url('album', array('action' => 'edit', 'id' => $album->id)); ?>">Edit</a>
+		<a href="<?php echo $this->url('album', array('action' => 'delete', 'id' => $album->id)); ?>">Delete</a>
+	</td>
+</tr>
+<?php endforeach; ?>
