--- a/module/Album/view/album/album/index.phtml
+++ b/module/Album/view/album/album/index.phtml
@@ -4,6 +4,7 @@ $title = 'My albums';
 $this->headTitle($title);
 
 ?>
+
 <h1><?php echo $this->escapeHtml($title); ?></h1>
 <p>
 	<a href="<?php echo $this->url('album', array('action' => 'add')); ?>">Add new album</a>
@@ -15,7 +16,8 @@ $this->headTitle($title);
 	<th>Artist</th>
 	<th>&nbsp;</th>
 </tr>
-<?php foreach ($algums as $album) : ?>
+
+<?php foreach ($albums as $album) : ?>
 <tr>
 	<td><?php echo $this->escapeHtml($album->title); ?></td>
 	<td><?php echo $this->escapeHtml($album->artist); ?></td>
@@ -25,3 +27,5 @@ $this->headTitle($title);
 	</td>
 </tr>
 <?php endforeach; ?>
+
+</table>
