Refactored controller to use Doctrine

--- a/module/Album/view/album/album/index.phtml
+++ b/module/Album/view/album/album/index.phtml
@@ -18,11 +18,11 @@ $this->headTitle($title);
     </tr>
     <?php foreach ($albums as $album) : ?>
         <tr>
-            <td><?= $this->escapeHtml($album->title) ?></td>
-            <td><?= $this->escapeHtml($album->artist) ?></td>
+            <td><?= $this->escapeHtml($album->getTitle()) ?></td>
+            <td><?= $this->escapeHtml($album->getArtist()) ?></td>
             <td>
-                <a href="<?= $this->url('album', ['action' => 'edit', 'id' => $album->id]) ?>">Edit</a>
-                <a href="<?= $this->url('album', ['action' => 'delete', 'id' => $album->id]) ?>">Delete</a>
+                <a href="<?= $this->url('album', ['action' => 'edit', 'id' => $album->getId()]) ?>">Edit</a>
+                <a href="<?= $this->url('album', ['action' => 'delete', 'id' => $album->getId()]) ?>">Delete</a>
             </td>
         </tr>
     <?php endforeach; ?>
