--- a/module/Album/view/album/album/delete.phtml
+++ b/module/Album/view/album/album/delete.phtml
@@ -9,13 +9,13 @@ $this->headTitle($title);
 
 <p>
     Are you sure that you want to delete
-    "<?= $this->escapeHtml($album->title) ?>" by
-    "<?= $this->escapeHtml($album->artist) ?>"?
+    "<?= $this->escapeHtml($album->getTitle()) ?>" by
+    "<?= $this->escapeHtml($album->getArtist()) ?>"?
 </p>
 
 <form action="<?= $url ?>" method="post">
     <div class="form-group">
-        <input type="hidden" name="id" value="<?= (int) $album->id ?>" />
+        <input type="hidden" name="id" value="<?= (int) $album->getId() ?>" />
         <input type="submit" class="btn btn-danger" name="del" value="Yes" />
         <input type="submit" class="btn btn-success" name="del" value="No" />
     </div>
